# pika

./: Cargo.toml  README.md
benches/: format.rs  lorem.txt  war_and_peace.txt
pika/: Cargo.toml
pika/src/: formatter.rs
pika_cli/: Cargo.toml
pika_cli/src/: main.rs
pkg/brew/: pika.rb
scripts/: macos_release.sh
src/: formatter.rs  main.rs
