[package]
name = "pika_cli"
version = "0.1.0"
authors = ["Eric Groom <bcgroom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"pika" = { path = "../pika" }
clap = { git = "https://github.com/clap-rs/clap/" }